# OSMV

./: .gitignore  AudioCaptureService.cs  CMakeLists.txt  Cargo.toml  DiscordRpcService.cs  LICENSE  MainWindow.xaml  MainWindow.xaml.cs  OBS-StreamMusicViewer.csproj  README.md  TROUBLESHOOTING.md  build.rs  index.html  settings.json  style.css
.github/workflows/: deploy-docs.yml
docs/: .remarkrc.mjs  README.md  _sidebar.md  architecture.md  configuration.md  index.html  installation.md  mdx-components.tsx  next-sitemap.config.js  next.config.ts  package-lock.json  package.json  troubleshooting.md  tsconfig.json
docs/app/: _meta.global.tsx  _meta.tsx  env.d.ts  global.css  layout.tsx  not-found.tsx  page.tsx
docs/app/docs/: _meta.tsx  page.mdx
docs/app/docs/architecture/: page.mdx
docs/app/docs/discord-rpc/: page.mdx
docs/app/docs/faq/: page.mdx
docs/app/docs/installation/: page.mdx
docs/app/docs/obs/: page.mdx
docs/app/docs/playing-now/: _meta.tsx  index.mdx
docs/app/docs/playing-now/json-data/: page.mdx
docs/app/docs/time/: page.mdx
docs/components/: index.ts
docs/components/annotations/: index.ts
docs/components/content/: index.ts
docs/components/content/card/: index.tsx  module-cards.tsx
docs/components/content/highlight/: index.tsx
docs/components/content/removed-note/: index.tsx
docs/components/icons/: index.ts
docs/components/lottie/not-found/: index.tsx
docs/components/media/: index.ts
docs/components/media/image/: index.tsx
docs/components/media/logo/: index.tsx
docs/components/media/video/: index.tsx
linux/: build_rust.sh  compile.sh  discord_rpc_service.py  osmv.py  requirements.txt
shared/: index.html  style.css
shared/qml/: DiscordSection.qml  DiscordView.qml  NowPlayingView.qml  OsmvHelpView.qml  OsmvLocale.qml  OsmvSeparator.qml  OsmvSettingsView.qml  OsmvSwitch.qml  OsmvTabButton.qml  OsmvTextField.qml  Theme.qml  TimeView.qml  main.qml  qmldir
src/: app.cpp  app.h  discordrpc.cpp  discordrpc.h  main.cpp  mainwindow.cpp  mainwindow.h  mediaprovider.h  mediaprovider_linux.cpp  mediaprovider_win.cpp  utils.cpp  utils.h
src-rust/: app.rs  discord.rs  gui.rs  main.rs  qml_interface.rs  utils.rs
src-rust/media/: linux_provider.rs  mod.rs  windows_provider.rs
windows/: App.xaml.cs  MainWindow.xaml.cs  OBS-StreamMusicViewer.csproj  OSMV.rc  compile.bat  compile_rust.bat
