[package]
name = "osmv"
version = "2.0.0"
edition = "2021"
description = "OBS Stream Music Viewer"

[[bin]]
name = "osmv"
path = "src-rust/main.rs"

[dependencies]
# GUI
eframe = { version = "0.31", features = ["default"] }
egui = "0.31"
egui_extras = { version = "0.31", features = ["image"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Base64
base64 = "0.22"

# HTTP for thumbnail fetching (Linux artUrl)
ureq = { version = "2", default-features = false, features = ["tls"] }

# Tray icon
tray-icon = "0.20"

# Cross-platform notification (for tray balloon)
notify-rust = { version = "4", default-features = false }

# Logging
log = "0.4"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Media_Control",
    "Storage_Streams",
] }

[target.'cfg(target_os = "linux")'.dependencies]
mpris = "2"

[build-dependencies]
# On Windows: embed icon and set subsystem to windows
[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
