[package]
name = "osmv"
version = "2.0.0"
edition = "2021"
description = "OBS Stream Music Viewer"

[[bin]]
name = "osmv"
path = "src-rust/main.rs"

[dependencies]
# QML GUI via CXX-Qt (Qt 6)
cxx = "1.0"
cxx-qt = "0.7"
cxx-qt-lib = { version = "0.7", features = ["qt_full"] }


# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Base64
base64 = "0.22"

# HTTP for thumbnail fetching (Linux artUrl)
ureq = { version = "2", default-features = false, features = ["tls", "json"] }

# Discord Rich Presence
discord-presence = "3"

# Single instance guard
single-instance = "0.3"

# Logging
log = "0.4"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Media_Control",
    "Storage_Streams",
] }

[target.'cfg(target_os = "linux")'.dependencies]
mpris = "2"

[build-dependencies]
cxx-qt-build = { version = "0.7", features = ["link_qt_object_files"] }


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
